--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,5 +1,5 @@
 body > .content {
-	margin-right: 340px;
+	margin-right: 320px;
 }
 
 .tagline, .search-result-meta {
